# cg-tank-wars-3d

./: .gitignore  CMakeLists.txt  README.md
Relatorios/: Tank Wars - Entrega 1.docx  Tank Wars - Entrega 2.docx  Tank Wars - Entrega 4.docx  Tank Wars - Entrega final.docx  tanque3D.c
TANK/: BOMB.DOC  BOMB.ICP  BOMB.OVR  BOMB2  BOMBCFG.HLP  BOMBCFG.ICP  REVISION.HST
exemplos/: Makefile  Para ler sobre exibir texto no OpenGL.txt  menu.c  terreno.cpp  teste_tanque.cpp  teste_terreno.cpp
include/: armas.hpp  cenario.hpp  configmenu.hpp  constantes.hpp  explosoes.hpp  globals.hpp  interacoes.hpp  interfaces.hpp  menu.hpp  mundo.hpp  municao.hpp  objetos2D.hpp  objetos3D.hpp  terreno.hpp
include/auxiliar/: auxiliares.hpp
include/cenario/: Cenario.h  Cenario.hpp  CenarioObject.h  Projetil.h  Tanque.h  Terreno.h
include/graphics/: cor.h
include/objetos/: Projetil.h  Tanque.h  armas.hpp  explosoes.hpp  jogador.hpp  municao.hpp
include/objetos/armas/: Arma.h  Bomba20Kilotons.h  Bomba5Megatons.h  Incinerador.h  IncineradorMk2.h  armas.hpp
include/objetos/explosoes/: BolaDeFogo.h  Explosao.h
include/ui/: Botao.h  ItemMenu.h  ItemMenuAlterarValorNumerico.h  ItemMenuBotao.h  ItemMenuEditarNome.h  ItemMenuRetangular.h  Menu.hpp
src/: Makefile  armas.cpp  armas.hpp  auxiliares.cpp  auxiliares.hpp  bomb.cpp  cenario.cpp  cenario.hpp  configmenu.cpp  configmenu.hpp  constantes.cpp  constantes.hpp  explosoes.cpp  explosoes.hpp  globals.cpp  globals.hpp  interacoes.cpp  interacoes.hpp  interfaces.cpp  interfaces.hpp  jogador.cpp  jogador.hpp  main.cpp  menu.cpp  menu.hpp  mundo.cpp  mundo.hpp  municao.cpp  municao.hpp  objetos2D.cpp  objetos2D.hpp  objetos3D.cpp  objetos3D.hpp  terreno.cpp  terreno.hpp
src/auxiliares/: auxiliares.cpp
src/cenario/: Cenario.cpp  CenarioObject.cpp  Projetil.cpp  Tanque.cpp  Terreno.cpp
src/graphics/: cor.cpp
src/objetos/: Projetil.cpp  Tanque.cpp  armas.cpp  explosoes.cpp  jogador.cpp  municao.cpp
src/objetos/armas/: Arma.cpp  Bomba20Kilotons.cpp  Bomba5Megatons.cpp  Incinerador.cpp  IncineradorMk2.cpp  armas.cpp
src/objetos/explosoes/: BolaDeFogo.cpp
src/ui/menu/: Botao.cpp  ItemMenu.cpp  ItemMenuAlterarValorNumerico.cpp  ItemMenuBotao.cpp  ItemMenuEditarNome.cpp  ItemMenuRetangular.cpp  Menu.cpp
